# trieshake

./: .gitignore  BUILDPLAN-clojure.md  BUILDPLAN.md  README.md  SPEC.md  pyproject.toml
clojure/: project.clj
clojure/src/trieshake/: cleaner.clj  core.clj  executor.clj  planner.clj  reporter.clj  scanner.clj
clojure/test/trieshake/: integration_test.clj  planner_test.clj
python/tests/: test_integration.py  test_planner.py
python/trieshake/: __main__.py  cli.py  executor.py  reporter.py  scanner.py
synthetic-build/: BUILDPLAN-python.md
tests/: test_integration.py  test_planner.py
trieshake/: cleaner.py  cli.py  planner.py
